Fix overlapping name and timestamp
In the conversation list, fix long conversation names overlapping with
the right-floated timestamps.

// FREEBIE

--- a/stylesheets/_global.scss
+++ b/stylesheets/_global.scss
@@ -302,12 +302,12 @@ $avatar-size: 44px;
   }
 
   .name {
+    display: block;
     margin: 0;
     font-size: 1em;
     font-weight: 400;
     text-overflow: ellipsis;
     overflow-x: hidden;
-    display: inline-block;
   }
 
   .number {
