--- a/stylesheets/_index.scss
+++ b/stylesheets/_index.scss
@@ -121,7 +121,7 @@ input.search {
 .last-timestamp {
   font-size: smaller;
   float: right;
-  margin-right: 10px;
+  margin: 0 10px;
 }
 
 .new-contact {
